<resources>
    <string name="app_name">AMOV_TP</string>
    <string name="action_settings">Settings</string>
    <string name="list_title">List Title</string>
    <string name="item_title">Item Title</string>
    <string name="total_default">€000,00</string>
    <string name="main_title">Shopping Lists</string>
    <string name="submit">Add new list</string>
    <string name="title_activity_list_items">ListItemsActivity</string>
    <string name="dialog_placeholder">New Item</string>
    <string name="dialog_create_new">Create New</string>
    <string name="cancel">Cancel</string>
    <string name="change_image">Change Image</string>
    <string name="brand">Brand</string>
    <string name="item_brand_placeholder">Item Brand</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="add_category">Add Category</string>
    <string name="add_unit">Add Unit</string>
</resources>