<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ProductCreatorActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imagePreview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_baseline_camera_alt_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changePreview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/change_image"
        app:layout_constraintEnd_toEndOf="@+id/imagePreview"
        app:layout_constraintStart_toStartOf="@+id/imagePreview"
        app:layout_constraintTop_toBottomOf="@+id/imagePreview" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/changePreview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <EditText
                android:id="@+id/et_product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand" />

            <EditText
                android:id="@+id/product_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_brand_placeholder" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Category" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/add_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_category"
                android:layout_gravity="center"
                android:onClick="onAddCategory"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Units" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/spinner_units"
                app:layout_constraintTop_toBottomOf="@+id/spinner_units">

                <EditText
                    android:id="@+id/editText_unit"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@+id/spinner_units"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Spinner
                    android:id="@+id/spinner_units"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/editText_unit" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <Button
                android:id="@+id/add_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_unit"
                android:layout_gravity="center"
                android:onClick="onAddUnit"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Notes" />

            <EditText
                android:id="@+id/notes_input"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="top"
                android:hint="@string/item_brand_placeholder" />
        </LinearLayout>
        <Button
            android:id="@+id/price_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price History"
            android:layout_gravity="center"
            android:onClick="onPriceHistory"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/btn_cancel_product"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel_product">

            <Button
                android:id="@+id/btn_cancel_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@+id/btn_create_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_create_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCreateProduct"
                android:text="@string/create"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel_product"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>